# flashcards-cli

./: .gitignore  README.md  dune-project  flashcards.opam
src/: cli.ml  commands.ml  config.ml  config.mli  csv.ml  csvIo.ml  dune  markdownTable.ml  quiz.ml  quiz.mli  util.ml  util.mli  vocabulary.ml  vocabulary.mli  vocabularyIo.ml  vocabularyIo.mli
