opam-version: "2.0"
name: "flashcards"
version: "0.1"
synopsis: "Terminal based flashcards"
maintainer: "Daniel Perez <daniel@perez.sh>"
authors: "Daniel Perez <daniel@perez.sh>"
license: "MIT"
homepage: "https://github.com/danhper/flashcards-cli"
bug-reports: "https://github.com/danhper/flashcards-cli"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs "@all"]
]
depends: [
  "core"                {>= "v0.16" & < "v0.17"}
  "core_unix"           {>= "v0.16" & < "v0.17"}
  "yojson"              {>= "1.6"   & < "2.0"}
  "ppx_deriving_yojson" {>= "3.3"   & < "4.0"}
  "linenoise"           {>= "1.2"   & < "2.0"}

  "dune"                {build & >= "2.0" & < "4.0"}
]
